ci: Switch testing from Fedora to macOS

--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -9,7 +9,7 @@ jobs:
   tests:
     strategy:
       matrix:
-        os: [ubuntu-latest, fedora-latest]
+        os: [ubuntu-latest, macos-latest]
         python-version: ['3.9', '3.10', '3.11']
     runs-on: ${{ matrix.os }}    
     steps:
