--- a/.github/workflows/push-tests.yml
+++ b/.github/workflows/push-tests.yml
@@ -11,12 +11,13 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+    environment: build
     steps:
       - uses: actions/checkout@v4
-      - run: pipx install poetry
+      - run: pipx install 'poetry==${{ vars.TARGET_POETRY_VERSION }}'
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '${{ vars.TARGET_PYTHON_VERSION }}'
           cache: poetry
       - run: poetry install
       - run: poetry run pytest
