--- a/.github/workflows/push-tests.yml
+++ b/.github/workflows/push-tests.yml
@@ -15,10 +15,11 @@ jobs:
     environment: build
     steps:
       - uses: actions/checkout@v4
+      - run: pipx install 'poetry==${{ vars.TARGET_POETRY_VERSION }}'
       - uses: actions/setup-python@v4
         with:
           python-version: '${{ vars.TARGET_PYTHON_VERSION }}'
           cache: poetry
-      - run: pipx install 'poetry==${{ vars.TARGET_POETRY_VERSION }}'
+      - run: poetry env use '${{ vars.TARGET_PYTHON_VERSION }}'
       - run: poetry install
       - run: poetry run pytest
