--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -2,22 +2,26 @@ name: Tests on PR to main
 
 on:
   pull_request:
-    branches:
-      - main
+    branches: [main]
+  push:
+    branches: [main]
 
 jobs:
   tests:
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
         python-version: ['3.9', '3.10', '3.11']
-    runs-on: ${{ matrix.os }}    
+    runs-on: ${{ matrix.os }}
+    environment: build
     steps:
       - uses: actions/checkout@v4
-      - run: pipx install poetry
+      - run: pipx install 'poetry==${{ vars.TARGET_POETRY_VERSION }}'
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
           cache: poetry
+      - run: poetry env use '${{ vars.TARGET_PYTHON_VERSION }}'
       - run: poetry install
       - run: poetry run pytest
