--- a/.github/workflows/push-tests.yml
+++ b/.github/workflows/push-tests.yml
@@ -1,5 +1,3 @@
-# This where will install Poetry project and run tests
-
 name: Tests on push
 
 on:
@@ -9,16 +7,19 @@ on:
       - 'tests/**'
       - 'pyproject.toml'
       - 'poetry.lock'
+      - '.github/workflows/**'
 
 jobs:
   tests:
     runs-on: ubuntu-latest
+    environment: build
     steps:
       - uses: actions/checkout@v4
-      - run: pipx install poetry
+      - run: pipx install 'poetry==${{ vars.TARGET_POETRY_VERSION }}'
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '${{ vars.TARGET_PYTHON_VERSION }}'
           cache: poetry
+      - run: poetry env use '${{ vars.TARGET_PYTHON_VERSION }}'
       - run: poetry install
       - run: poetry run pytest
