--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ ipykernel = "^6.25.2"
 ipython = "^8.15.0"
 autopep8 = "^2.0.4"
 rich = "^13.5.3"
+pytest-xdist = "^3.3.1"
 
 [[tool.poetry.source]]
 name = "jax_cpu"
@@ -41,3 +42,6 @@ priority = "primary"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+addopts="-n auto"
