--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,16 +3,11 @@ on:
   push:
     branches: main
 
-name: docs
-
-env:
-  POETRY_VERSION: "1.6.1"
-  PYTHON_VERSION: "3.12"
+name: Website
 
 jobs:
   
   render:
-    # setup
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -21,7 +16,7 @@ jobs:
       - uses: actions/upload-pages-artifact@v2
         with:
           name: github-pages
-          path: docs/
+          path: _site/
   
   deploy:
     needs: render
