--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.9,<3.13"
 seaborn = "^0.12.2"
 tqdm = "^4.66.1"
 papermill = "^2.5.0"
+loguru = "^0.7.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
@@ -26,6 +27,7 @@ pytest-xdist = "^3.3.1"
 ipywidgets = "^8.1.1"
 scikit-learn = "^1.3.2"
 jupyter = "^1.0.0"
+pytest-cov = "^4.1.0"
 
 [[tool.poetry.source]]
 name = "jax_cpu"
