docs: add Makefile and change width

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,3 +18,7 @@ website:
 format:
   html:
     toc: true
+    grid:
+      sidebar-width: 400px
+      body-width: 1000px
+      margin-width: 300px
