--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,8 @@ loguru = "^0.7.2"
 black = "^23.3.0"
 pylint = "^2.17.4"
 pytest = "^7.3.2"
-jax = "^0.4.20"
-jaxlib = {version = "^0.4.20", source = "jax_cpu"}
+jax = "0.4.20"
+jaxlib = {version = "0.4.20", source = "jax_cpu"}
 rdkit = "^2023.3.1"
 ipykernel = "^6.25.2"
 ipython = "^8.15.0"
