--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,33 @@
 [tool.poetry]
 name = "moll"
-version = "0.1.6"
+version = "0.1.7"
 description = ""
 authors = ["Vsevolod Shegolev <v@sheg.cc>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.13"
 seaborn = "^0.12.2"
 tqdm = "^4.66.1"
+papermill = "^2.5.0"
+loguru = "^0.7.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
 pylint = "^2.17.4"
 pytest = "^7.3.2"
-jax = "^0.4.12"
-jaxlib = {version = "^0.4.12", source = "jax_cpu"}
+jax = "0.4.20"
+jaxlib = {version = "0.4.20", source = "jax_cpu"}
 rdkit = "^2023.3.1"
 ipykernel = "^6.25.2"
 ipython = "^8.15.0"
 autopep8 = "^2.0.4"
 rich = "^13.5.3"
 pytest-xdist = "^3.3.1"
+ipywidgets = "^8.1.1"
+scikit-learn = "^1.3.2"
+jupyter = "^1.0.0"
+pytest-cov = "^4.1.0"
 
 [[tool.poetry.source]]
 name = "jax_cpu"
@@ -45,3 +51,9 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
 addopts="-n auto"
+
+[tool.pylint.messages_control]
+max-line-length = 120
+disable = [
+  "missing-docstring",
+]
