--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -25,5 +25,5 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: poetry
       - run: poetry env use '${{ vars.TARGET_PYTHON_VERSION }}'
-      - run: poetry install
+      - run: poetry install --with jax_cpu
       - run: poetry run pytest
