--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,69 +5,63 @@ description = ""
 authors = ["Vsevolod Shegolev <v@sheg.cc>"]
 readme = "README.md"
 
-# Main dependencies
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.12"
-tqdm = "^4.66.1"
+python = ">=3.9,<3.13"
+rdkit = "^2023.3.1"
 loguru = "^0.7.2"
 
-# Dev dependencies
 
 [tool.poetry.group.dev.dependencies]
+tqdm = "^4.66.1"
 seaborn = "^0.12.2"
-black = "^23.3.0"
-pylint = "^2.17.4"
 pytest = "^7.3.2"
-rdkit = "^2023.3.1"
 ipykernel = "^6.25.2"
 ipython = "^8.15.0"
 autopep8 = "^2.0.4"
-rich = "^13.5.3"
 pytest-xdist = "^3.3.1"
 ipywidgets = "^8.1.1"
 scikit-learn = "^1.3.2"
 jupyter = "^1.0.0"
 pytest-cov = "^4.1.0"
+cloudpickle = "^3.0.0"
+
+
+[tool.poetry.group.jax_cpu]
+optional = true
+
+[tool.poetry.group.jax_cpu.dependencies]
 jax = "0.4.20"
-# TODO: add option to install jaxlib for different hardware and platforms
-jaxlib = [
-  { version = "0.4.20", source = "jax_cpu", markers = "sys_platform == 'darwin'" },
-  { version = "0.4.20+cuda12.cudnn89", source = "jax_cuda", markers = "sys_platform == 'linux'" },
-]
+jaxlib = { version = "0.4.20", source = "jax_cpu" }
 
+[tool.poetry.group.torch]
+optional = true
 
-# Sources
+[tool.poetry.group.torch.dependencies]
+torch = { version = "^2.1.0", source = "torch" }
 
-
-[tool.poetry.group.profiler.dependencies]
-tensorflow = "^2.15.0"
-
-[[tool.poetry.source]]
-name = "jax_cpu"
-url = "https://storage.googleapis.com/jax-releases/jax_releases.html"
-priority = "primary"
-
-
-[[tool.poetry.source]]
-name = "jax_cuda"
-url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
-priority = "primary"
-
+[tool.poetry.extras]
+cpu = ["jax", "jaxlib"]
 
 [[tool.poetry.source]]
 name = "PyPI"
 priority = "primary"
 
-# Tools
+[[tool.poetry.source]]
+name = "jax_cpu"
+url = "https://storage.googleapis.com/jax-releases/jax_releases.html"
+priority = "explicit"
+
+[[tool.poetry.source]]
+name = "jax_cuda"
+url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
+priority = "explicit"
+
+[[tool.poetry.source]]
+name = "torch"
+url = "https://download.pytorch.org/whl/cpu"
+priority = "explicit"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.pytest.ini_options]
-addopts = "-n auto"
-
-[tool.pylint.messages_control]
-max-line-length = 120
-disable = ["missing-docstring"]
