--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -24,6 +24,6 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: poetry
-      - run: poetry env use '${{ vars.TARGET_PYTHON_VERSION }}'
+      - run: poetry env use ${{ matrix.python-version }}
       - run: poetry install -E cpu
       - run: poetry run pytest
