--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ scikit-learn = "^1.3.2"
 jupyter = "^1.0.0"
 pytest-cov = "^4.1.0"
 cloudpickle = "^3.0.0"
+ruff = "^0.1.6"
 
 
 [tool.poetry.group.torch]
@@ -43,6 +44,22 @@ addopts = """
 --doctest-continue-on-failure \
 -n auto
 """
+
+[tool.ruff]
+target-version = "py310"
+extend-include = ["*.ipynb"]
+
+
+[tool.ruff.lint]
+select = [
+    "E",   # pycodestyle
+    "F",   # Pyflakes
+    "UP",  # pyupgrade
+    "B",   # flake8-bugbear
+    "SIM", # flake8-simplify
+    "I",   # isort
+]
+ignore = ["F403"]
 
 
 [[tool.poetry.source]]
