--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,21 @@ version = "0.1.10"
 description = ""
 authors = ["Vsevolod Shegolev <v@sheg.cc>"]
 readme = "README.md"
+license = "LGPL-2.1-or-later"
+exclude = ["moll/**/tests/"]
+repository = "https://github.com/vsheg/moll"
+documentation = "https://vsheg.github.io/moll/"
+keywords = ["chemistry", "cheminformatics", "chemoinformatics"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: GPU :: NVIDIA CUDA",
+    "Topic :: Scientific/Engineering :: Chemistry",
+    "Topic :: Scientific/Engineering :: Bio-Informatics",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+]
 
 
 [tool.poetry.dependencies]
@@ -28,6 +43,7 @@ scikit-learn = "^1.3.2"
 jupyter = "^1.0.0"
 pytest-cov = "^4.1.0"
 cloudpickle = "^3.0.0"
+ruff = "^0.1.6"
 
 
 [tool.poetry.group.torch]
@@ -36,15 +52,36 @@ optional = true
 [tool.poetry.group.torch.dependencies]
 torch = { version = "^2.1.0", source = "torch" }
 
+[tool.pytest.ini_options]
+testpaths = ["moll/"]
+addopts = """
+--doctest-modules \
+--doctest-continue-on-failure \
+-n auto
+"""
+
+[tool.ruff]
+target-version = "py310"
+extend-include = ["*.ipynb"]
+
+
+[tool.ruff.lint]
+select = [
+    "E",   # pycodestyle
+    "F",   # Pyflakes
+    "UP",  # pyupgrade
+    "B",   # flake8-bugbear
+    "SIM", # flake8-simplify
+    "I",   # isort
+    "TCH", # flake8-type-checking 
+]
+ignore = []
+pydocstyle.convention = "google"
+
 
 [[tool.poetry.source]]
 name = "PyPI"
 priority = "primary"
-
-[[tool.poetry.source]]
-name = "jax_cpu"
-url = "https://storage.googleapis.com/jax-releases/jax_releases.html"
-priority = "explicit"
 
 [[tool.poetry.source]]
 name = "jax_cuda"
