--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,15 +67,20 @@ extend-include = ["*.ipynb"]
 
 [tool.ruff.lint]
 select = [
-    "E",   # pycodestyle
-    "F",   # Pyflakes
-    "UP",  # pyupgrade
-    "B",   # flake8-bugbear
-    "SIM", # flake8-simplify
-    "I",   # isort
-    "TCH", # flake8-type-checking 
+    "E",    # pycodestyle
+    "F",    # Pyflakes
+    "UP",   # pyupgrade
+    "B",    # flake8-bugbear
+    "SIM",  # flake8-simplify
+    "I",    # isort
+    "TCH",  # flake8-type-checking 
+    "D",    # flake8-docstrings
+    "D213", # start docstring on a second line
 ]
-ignore = []
+ignore = [
+    "D212", # start docstring on a first line
+    "D200", # one-line docstring should fit on one line 
+]
 pydocstyle.convention = "google"
 
 
