--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,6 @@ python = ">=3.10,<3.13"
 rdkit = "^2023.3.1"
 loguru = "^0.7.2"
 jax = { version = "^0.4.20", extras = ["cpu"], optional = true }
-jaxtyping = "^0.2.24"
 
 [tool.poetry.extras]
 cpu = ["jax"]
@@ -81,6 +80,7 @@ select = [
 ignore = [
     "D212", # start docstring on a first line
     "D200", # one-line docstring should fit on one line 
+    "D103", # missing docstring in public function
 ]
 pydocstyle.convention = "google"
 
