Custom similarity and potential functions (#14)
This pull request includes several new features and code refactorings. It adds support for fractional k_neighbors, custom potential functions, and default values for similarity functions. It also includes type aliases, random key generation based on time, utility functions for generating globs and computing distances, and support for custom similarity functions. Additionally, it updates the poetry environment, fixes type annotations, and improves documentation and tests.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,14 @@
 {
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
+    "python.analysis.typeCheckingMode": "basic",
+    "python.analysis.diagnosticMode": "workspace",
     "python.linting.enabled": true,
     "[python]": {
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "charliermarsh.ruff",
         "editor.codeActionsOnSave": {
-            "source.organizeImports": true
+            "source.organizeImports": "explicit"
         },
     },
     "notebook.formatOnSave.enabled": true,
