--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ rdkit = "^2023.3.1"
 loguru = "^0.7.2"
 jax = { version = "^0.4.20", extras = ["cpu"], optional = true }
 atpublic = "^4.0"
+datamol = "^0.12.2"
 
 [tool.poetry.extras]
 cpu = ["jax"]
