--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,16 @@ pytest-cov = "^4.1.0"
 cloudpickle = "^3.0.0"
 ruff = "^0.1.6"
 
+[tool.poetry.group.docs.dependencies]
+mkdocs = "^1.5.3"
+black = "^23.12.0"
+mkdocstrings = { extras = ["python"], version = "^0.24.0" }
+mkdocs-gen-files = "^0.5.0"
+mkdocs-literate-nav = "^0.6.1"
+mkdocs-section-index = "^0.3.8"
+mkdocs-material = "^9.5.2"
+mkdocs-minify-plugin = "^0.7.1"
+
 
 [tool.poetry.group.torch]
 optional = true
