--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ mkdocs-literate-nav = "^0.6.1"
 mkdocs-section-index = "^0.3.8"
 mkdocs-material = "^9.5.2"
 mkdocs-minify-plugin = "^0.7.1"
+mkdocs-jupyter = "^0.24.6"
 
 
 [tool.poetry.group.torch]
