--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ jupyter = "^1.0.0"
 pytest-cov = "^4.1.0"
 cloudpickle = "^3.0.0"
 ruff = "^0.1.8"
+pre-commit = "^3.6.0"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.5.3"
