--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ rdkit = "^2023.3.1"
 loguru = "^0.7.2"
 jax = { version = "^0.4.20", extras = ["cpu"], optional = true }
 atpublic = "^4.0"
+datamol = "^0.12.2"
 
 [tool.poetry.extras]
 cpu = ["jax"]
@@ -44,7 +45,19 @@ scikit-learn = "^1.3.2"
 jupyter = "^1.0.0"
 pytest-cov = "^4.1.0"
 cloudpickle = "^3.0.0"
-ruff = "^0.1.6"
+ruff = "^0.1.8"
+pre-commit = "^3.6.0"
+
+[tool.poetry.group.docs.dependencies]
+mkdocs = "^1.5.3"
+black = "^23.12.0"
+mkdocstrings = { extras = ["python"], version = "^0.24.0" }
+mkdocs-gen-files = "^0.5.0"
+mkdocs-literate-nav = "^0.6.1"
+mkdocs-section-index = "^0.3.8"
+mkdocs-material = "^9.5.2"
+mkdocs-minify-plugin = "^0.7.1"
+mkdocs-jupyter = "^0.24.6"
 
 
 [tool.poetry.group.torch]
@@ -52,6 +65,7 @@ optional = true
 
 [tool.poetry.group.torch.dependencies]
 torch = { version = "^2.1.0", source = "torch" }
+
 
 [tool.pytest.ini_options]
 testpaths = ["moll/"]
@@ -79,12 +93,17 @@ select = [
     "D213", # start docstring on a second line
 ]
 ignore = [
-    "D212", # start docstring on a first line
-    "D200", # one-line docstring should fit on one line 
     "D103", # missing docstring in public function
+    "D104", # missing docstring in public package
+    "D105", # missing docstring in magic method
+    "D200", # one-line docstring should fit on one line 
+    "D202", # no blank lines allowed after function docstring
+    "D212", # start docstring on a first line
 ]
 pydocstyle.convention = "google"
 
+[tool.ruff.per-file-ignores]
+"moll/**/test*" = ["D100"]
 
 [[tool.poetry.source]]
 name = "PyPI"
