--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ loguru = "^0.7.2"
 jax = { version = "^0.4.20", extras = ["cpu"], optional = true }
 atpublic = "^4.0"
 datamol = "^0.12.2"
+ruff = "^0.1.8"
 
 [tool.poetry.extras]
 cpu = ["jax"]
@@ -79,6 +80,8 @@ addopts = """
 target-version = "py310"
 extend-include = ["*.ipynb"]
 
+[tool.ruff.format]
+docstring-code-format = true
 
 [tool.ruff.lint]
 select = [
