refactor: clean poetry groups and sources

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,13 +61,6 @@ mkdocs-minify-plugin = "^0.7.1"
 mkdocs-jupyter = "^0.24.6"
 
 
-[tool.poetry.group.torch]
-optional = true
-
-[tool.poetry.group.torch.dependencies]
-torch = { version = "^2.1.0", source = "torch" }
-
-
 [tool.pytest.ini_options]
 testpaths = ["moll/"]
 addopts = """
@@ -79,9 +72,8 @@ addopts = """
 [tool.ruff]
 target-version = "py310"
 extend-include = ["*.ipynb"]
+format.docstring-code-format = true
 
-[tool.ruff.format]
-docstring-code-format = true
 
 [tool.ruff.lint]
 select = [
@@ -112,15 +104,6 @@ pydocstyle.convention = "google"
 name = "PyPI"
 priority = "primary"
 
-[[tool.poetry.source]]
-name = "jax_cuda"
-url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
-priority = "explicit"
-
-[[tool.poetry.source]]
-name = "torch"
-url = "https://download.pytorch.org/whl/cpu"
-priority = "explicit"
 
 [build-system]
 requires = ["poetry-core"]
