--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ cloudpickle = "^3.0.0"
 ruff = "^0.1.8"
 pre-commit = "^3.6.0"
 pyarrow = "^15.0.0"
+papermill = "^2.5.0"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.5.3"
