--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/vsheg/moll"
 documentation = "https://vsheg.github.io/moll/"
 keywords = ["chemistry", "cheminformatics", "chemoinformatics"]
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 3 - Alpha",
     "Environment :: GPU :: NVIDIA CUDA",
     "Topic :: Scientific/Engineering :: Chemistry",
     "Topic :: Scientific/Engineering :: Bio-Informatics",
@@ -47,6 +47,8 @@ pytest-cov = "^4.1.0"
 cloudpickle = "^3.0.0"
 ruff = "^0.1.8"
 pre-commit = "^3.6.0"
+pyarrow = "^15.0.0"
+papermill = "^2.5.0"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.5.3"
@@ -60,13 +62,6 @@ mkdocs-minify-plugin = "^0.7.1"
 mkdocs-jupyter = "^0.24.6"
 
 
-[tool.poetry.group.torch]
-optional = true
-
-[tool.poetry.group.torch.dependencies]
-torch = { version = "^2.1.0", source = "torch" }
-
-
 [tool.pytest.ini_options]
 testpaths = ["moll/"]
 addopts = """
@@ -78,6 +73,7 @@ addopts = """
 [tool.ruff]
 target-version = "py310"
 extend-include = ["*.ipynb"]
+format.docstring-code-format = true
 
 
 [tool.ruff.lint]
@@ -109,15 +105,6 @@ pydocstyle.convention = "google"
 name = "PyPI"
 priority = "primary"
 
-[[tool.poetry.source]]
-name = "jax_cuda"
-url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
-priority = "explicit"
-
-[[tool.poetry.source]]
-name = "torch"
-url = "https://download.pytorch.org/whl/cpu"
-priority = "explicit"
 
 [build-system]
 requires = ["poetry-core"]
