--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,14 +23,24 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
-rdkit = "^2023.3.1"
 loguru = "^0.7.2"
-jax = { version = "^0.4.20", extras = ["cpu"], optional = true }
 atpublic = "^4.0"
 datamol = "^0.12.2"
 
-[tool.poetry.extras]
-cpu = ["jax"]
+[tool.poetry.group.cpu]
+optional = true
+
+[tool.poetry.group.cpu.dependencies]
+jax = "^0.4.30"
+
+[tool.poetry.group.cuda]
+optional = true
+
+[tool.poetry.group.cuda.dependencies]
+jax = { version = "^0.4.30", extras = ["cuda12"] }
+
+[tool.poetry.group.dev]
+optional = true
 
 [tool.poetry.group.dev.dependencies]
 tqdm = "^4.66.1"
@@ -49,6 +59,9 @@ ruff = "^0.1.8"
 pre-commit = "^3.6.0"
 pyarrow = "^15.0.0"
 papermill = "^2.5.0"
+
+[tool.poetry.group.docs]
+optional = true
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.5.3"
@@ -100,6 +113,7 @@ pydocstyle.convention = "google"
 
 [tool.ruff.per-file-ignores]
 "moll/**/test*" = ["D100"]
+
 
 [[tool.poetry.source]]
 name = "PyPI"
