--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
       - B: notebooks/chembl-1-percent.ipynb
       - C: notebooks/zinc20.ipynb
   - API: api/
+  - Notes: notes/
 
 theme:
   name: material
