--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -25,5 +25,5 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: poetry
       - run: poetry env use ${{ matrix.python-version }}
-      - run: poetry install --with cpu
+      - run: poetry install --with cpu,dev
       - run: poetry run pytest
