--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ addopts = """
 target-version = "py310"
 extend-include = ["*.ipynb"]
 format.docstring-code-format = true
+line-length = 90
 
 
 [tool.ruff.lint]
