--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ python = ">=3.10,<3.13"
 loguru = "^0.7.2"
 atpublic = "^4.0"
 datamol = "^0.12.2"
+typer = "^0.12.5"
 
 [tool.poetry.group.cpu]
 optional = true
@@ -63,7 +64,7 @@ scikit-learn = "^1.3.2"
 jupyter = "^1.0.0"
 pytest-cov = "^4.1.0"
 cloudpickle = "^3.0.0"
-ruff = "^0.1.8"
+ruff = "^0.6.4"
 pre-commit = "^3.6.0"
 pyarrow = "^15.0.0"
 papermill = "^2.5.0"
@@ -82,6 +83,8 @@ mkdocs-material = "^9.5.2"
 mkdocs-minify-plugin = "^0.7.1"
 mkdocs-jupyter = "^0.24.6"
 
+[tool.poetry.scripts]
+moll = "moll.cli.cli:cli"
 
 [tool.pytest.ini_options]
 testpaths = ["moll/"]
